Closed Bug 557757 Opened 15 years ago Closed 15 years ago

e10s builds are burning after merge with mozilla-central

Categories

(Core :: IPC, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: romaxa, Unassigned)

References

Details

Attachments

(2 files, 1 obsolete file)

Build bustage after merge with m-c, caused by not synced js/ipc code with bug 548702. Also possible problem with nsDOMClassInfoClasses.h and bug 533637 might cause some problems with ContentFrameMessageManager class
Also ContentFrameMessageManager not compiling and showing this error: ../../staticlib/components/libgklayout.a(nsDOMClassInfo.o): In function `nsDOMClassInfo::Init()': dom/base/nsDOMClassInfo.cpp:3765: undefined reference to `kDOMClassInfo_ContentFrameMessageManager_interfaces' /usr/bin/ld: ../../staticlib/components/libgklayout.a(nsDOMClassInfo.o): relocation R_386_GOTOFF against undefined hidden symbol `kDOMClassInfo_ContentFrameMessageManager_interfaces' can not be used when making a shared object /usr/bin/ld: final link failed: Bad value collect2: ld returned 1 exit status make[5]: *** [libxul.so] Error 1 Not sure if this fix was good or bad http://hg.mozilla.org/projects/electrolysis/rev/2e96ee8bf80d
Attachment #437513 - Flags: review?(Olli.Pettay)
Attached patch Build fix for FrameMessenger (obsolete) — Splinter Review
This patch compiles fine for me
Attachment #437514 - Flags: review?(Olli.Pettay)
Comment on attachment 437514 [details] [diff] [review] Build fix for FrameMessenger So apparently this should be done for TabChildGlobal
Attachment #437513 - Flags: review?(Olli.Pettay) → review+
Comment on attachment 437513 [details] [diff] [review] Trivial JS compilation fix I guess this is right.
Attachment #437514 - Attachment is obsolete: true
Attachment #437514 - Flags: review?(Olli.Pettay)
Fixed
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: