Bug 557757, e10s is burning